# jimbot

./: .gitignore  Cargo.toml  README.md  index.html  mario.html  tetris.html  tmnt2.html
dist-mario/: jimbot-desktop.d.ts  jimbot-desktop_bg.wasm.d.ts
dist-tmnt2/: jimbot-desktop.js
jimbot/: Cargo.toml
jimbot-desktop/: Cargo.toml
jimbot-desktop/src/: debugger.rs  main.rs
jimbot-desktop/src/debugger/: cpu_debugger.rs  lcd_debugger.rs  mmu_debugger.rs  ppu_debugger.rs
jimbot-web/: Cargo.toml  dist.sh  index.html
jimbot-web-wasm/: jimbot_web.d.ts  jimbot_web.js  jimbot_web_bg.wasm  jimbot_web_bg.wasm.d.ts  package.json
jimbot-web/src/: lib.rs
jimbot/src/: apu.rs  cartridge.rs  cpu.rs  jimbot.rs  lib.rs  mmu.rs  ppu.rs  saver.rs  timer.rs  wram.rs
jimbot/src/apu/: channel1.rs  channel2.rs  channel3.rs  channel4.rs  envelope.rs  frame_sequencer.rs  frequency.rs  frequency_sweep.rs  length.rs  noise_frequency.rs  wave_length.rs
jimbot/src/cartridge/: cartridge_mbc1.rs  cartridge_mbc1_ram.rs  cartridge_mbc1_ram_battery.rs  cartridge_mbc2_battery.rs  cartridge_mbc3_ram_battery.rs  cartridge_mbc5.rs  cartridge_mbc5_ram_battery.rs  cartridge_rom_only.rs  cartridge_type.rs  metadata.rs  ram_size_type.rs  rom_size_type.rs
jimbot/src/cpu/: condition.rs  decoder.rs  executor.rs  fetcher.rs  fflag.rs  hex_u16.rs  hex_u8.rs  instruction.rs  op.rs  op_arg.rs  registers.rs
jimbot/src/mmu/: bgp.rs  interrupt_flag.rs  joypad.rs  lcdc.rs  lcdstat.rs  sprite.rs  tac.rs
jimbot/src/ppu/: lcd_transfer.rs  oam_search.rs  pixel_fetcher.rs  pixel_fifo.rs  pixel_type.rs  (+2 more)
