[package]
edition = "2021"
name = "jimbot-web"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
cpal = {version = "0.13.5", features = ["wasm-bindgen"]}
ringbuf = "0.2.8"
jimbot = {path = "../jimbot"}
wasm-bindgen = "0.2.80"
web-sys = { version = "0.3.57", features = ["Storage", "Window", "console"]}
base64 = "0.13.0"
js-sys = "0.3.57"
console_error_panic_hook = "0.1.7"
